--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -43,3 +43,7 @@ jobs:
         docker exec -u root halyard sh /opt/getbom.sh ${SPINNAKER_VERSION}
         docker cp halyard:/opt/${SPINNAKER_VERSION}.yml ./${SPINNAKER_VERSION}.yml
         mkdir -p .boms
+    - uses: actions/upload-artifact@v2
+      with: 
+        name: ${{ env.SPINNAKER_VERSION }}-Install-Scripts
+        path: artifacts/*
