--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,8 +42,10 @@ jobs:
         docker exec -u root halyard chmod +x /opt/getbom.sh
         docker exec -u root halyard sh /opt/getbom.sh ${SPINNAKER_VERSION}
         docker cp halyard:/opt/${SPINNAKER_VERSION}.yml ./${SPINNAKER_VERSION}.yml
+        mkdir -p artifacts/${SPINNAKER_VERSION}/
+        mv ${SPINNAKER_VERSION}.yml artifacts/${SPINNAKER_VERSION}/${BOM_DIR}/bom/
         mkdir -p .boms
     - uses: actions/upload-artifact@v2
       with: 
         name: ${{ env.SPINNAKER_VERSION }}-Install-Scripts
-        path: ${SPINNAKER_VERSION}.yml
+        path:  artifacts/*
