--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,9 +42,9 @@ jobs:
         docker exec -u root halyard chmod +x /opt/getbom.sh
         docker exec -u root halyard sh /opt/getbom.sh ${SPINNAKER_VERSION}
         docker cp halyard:/opt/${SPINNAKER_VERSION}.yml ./${SPINNAKER_VERSION}.yml
-        mkdir -p artifacts/${SPINNAKER_VERSION}/
+        mkdir -p artifacts/${SPINNAKER_VERSION}/${BOM_DIR}/bom/
         mv ${SPINNAKER_VERSION}.yml artifacts/${SPINNAKER_VERSION}/${BOM_DIR}/bom/
-        mkdir -p .boms
+
     - uses: actions/upload-artifact@v2
       with: 
         name: ${{ env.SPINNAKER_VERSION }}-Install-Scripts
