--- a/.github/workflows/pull.yaml
+++ b/.github/workflows/pull.yaml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Spinnaker Pre Install
-env:
-  SPINNAKER_VERSION: 1.26.6
-  #REGISTRY_URL: "gcr.io/spinnaker-marketplace/"
-  REGISTRY_URL: "us-docker.pkg.dev/spinnaker-community/docker/"
-  NEW_REGISTRY_URL: "registry.cn-beijing.aliyuncs.com/spinnaker-cd/"
-  NEW_REGISTRY_URL2: "docker.io/spinnakercd/"
-  TAG_FILE: "tagfile.txt"
-  BOM_DIR: ".boms"
+name: pull images
+# env:
+#   SPINNAKER_VERSION: 1.26.6
+#   #REGISTRY_URL: "gcr.io/spinnaker-marketplace/"
+#   REGISTRY_URL: "us-docker.pkg.dev/spinnaker-community/docker/"
+#   NEW_REGISTRY_URL: "registry.cn-beijing.aliyuncs.com/spinnaker-cd/"
+#   NEW_REGISTRY_URL2: "docker.io/spinnakercd/"
+#   TAG_FILE: "tagfile.txt"
+#   BOM_DIR: ".boms"
 
 on:
   push:
