--- a/.github/workflows/pull.yaml
+++ b/.github/workflows/pull.yaml
@@ -33,8 +33,8 @@ jobs:
 #     ## 
     - name: pull
       run: |
-        docker pull gcr.io/kubernetes-spinnaker/redis-cluster:v2
-        docker save gcr.io/kubernetes-spinnaker/redis-cluster:v2 -o redis.tar
+        docker pull k8s.gcr.io/cluster-proportional-autoscaler-amd64:1.6.0
+        docker k8s.gcr.io/cluster-proportional-autoscaler-amd64:1.6.0 -o autoscaler.tar
         mkdir artifacts
         mv redis.tar artifacts/
         
