--- a/.github/workflows/pull.yaml
+++ b/.github/workflows/pull.yaml
@@ -33,8 +33,8 @@ jobs:
 #     ## 
     - name: pull
       run: |
-        docker pull k8s.gcr.io/cluster-proportional-autoscaler-amd64:1.6.0
-        docker save k8s.gcr.io/cluster-proportional-autoscaler-amd64:1.6.0 -o autoscaler.tar
+        docker pull quay.io/prometheus/alertmanager:latest
+        docker save quay.io/prometheus/alertmanager:latest -o autoscaler.tar
         mkdir artifacts
         mv autoscaler.tar artifacts/
         
