--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,20 @@
+# This is a basic workflow to help you get started with Actions
 name: "Example"
 description: "Receives file and generates output"
+
+on:
+  push:
+    paths:
+      - '.github/workflows/**'
+jobs:
+  build:
+    runs-on: ubuntu-18.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: test
+      run: |
+        docker version
+
 inputs:
   file-path: # id of input
     description: "Path to test script"
